fix text-alignment of help text on  settings pages

--- a/src/postorius/static/postorius/css/style.css
+++ b/src/postorius/static/postorius/css/style.css
@@ -270,7 +270,9 @@ span.more_info span {
     border-style:solid; border-color:black; border-width:1px; z-index: 6;
 }
 span.more_info:hover span {
-    left: 2%; background: #ffffff;
+    left: 2%;
+    background: #ffffff;
+    text-align: left;
 }
 span.more_info span {
     position: absolute; left: -9999px;
